# BlastFramework

./: .gitignore  CMakeLists.txt
BFW/: Button.cpp  Button.h  Camera.cpp  Camera.h  Clickable.cpp  Clickable.h  Core.cpp  Core.h  Debug.h  Entity.cpp  Entity.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  color.cpp  color.h  debug.cpp  debug.h  resourceManager.cpp  resourceManager.h  sceneManager.cpp  sceneManager.h  shader.cpp  shader.h  text.cpp  text.h  texture.cpp  texture.h
BFW/fonts/: font.tga
BFW/shaders/: sprite.frag  sprite.vert
BlastFramework/: Camera.cpp  Entity.h  Renderer.cpp  Renderer.h  Sprite.cpp
demo/: Card.cpp  Card.h  Demo.cpp  World.cpp  World.h
demo/assets/: card1.tga
